force-app/main/default/objects/PNR_Actuals__c/PNR_Actuals__c.object-meta.xml
<CustomObject>
    <label>PNR Actuals</label>
    <nameField>
        <displayFormat>PNRA-{000000000}</displayFormat>
        <label>PNR Actuals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PNR Actuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>