force-app/main/default/objects/PNR_Actuals__c/fields/Airline__c.field-meta.xml
<CustomField>
    <fullName>Airline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Airline</label>
    <referenceTo>Airline__c</referenceTo>
    <relationshipLabel>PNR Actuals</relationshipLabel>
    <relationshipName>PNR_Actuals</relationshipName>
    <type>Lookup</type>
</CustomField>