force-app/main/default/objects/PNR_Actuals__c/fields/Cash_Tax__c.field-meta.xml
<CustomField>
    <fullName>Cash_Tax__c</fullName>
    <label>Cash Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>