force-app/main/default/objects/PNR_Actuals__c/fields/Credit_Fare__c.field-meta.xml
<CustomField>
    <fullName>Credit_Fare__c</fullName>
    <label>Credit Fare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>