force-app/main/default/objects/PNR_Actuals__c/fields/Credit_Tax__c.field-meta.xml
<CustomField>
    <fullName>Credit_Tax__c</fullName>
    <label>Credit Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>