force-app/main/default/objects/PNR_Actuals__c/fields/Depart_Date__c.field-meta.xml
<CustomField>
    <fullName>Depart_Date__c</fullName>
    <label>Depart Date</label>
    <type>Date</type>
</CustomField>