force-app/main/default/objects/PNR_Actuals__c/fields/Pax_Name__c.field-meta.xml
<CustomField>
    <fullName>Pax_Name__c</fullName>
    <label>Pax Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>