force-app/main/default/objects/PNR_Actuals__c/fields/PNR__c.field-meta.xml
<CustomField>
    <fullName>PNR__c</fullName>
    <label>PNR</label>
    <referenceTo>PNR_POE__c</referenceTo>
    <relationshipLabel>PNR Actuals</relationshipLabel>
    <relationshipName>PNR_Actuals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>