force-app/main/default/objects/PNR_Actuals__c/fields/PNR_Accounting_Line__c.field-meta.xml
<CustomField>
    <fullName>PNR_Accounting_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PNR Accounting Line</label>
    <referenceTo>PNR_Accounting_Line_POE__c</referenceTo>
    <relationshipLabel>PNR Actuals</relationshipLabel>
    <relationshipName>PNR_Actuals</relationshipName>
    <type>Lookup</type>
</CustomField>